RESOLVED FIXED75679
REGRESSION(r104210): Dromaeo DOM test score is lower
https://bugs.webkit.org/show_bug.cgi?id=75679
Summary REGRESSION(r104210): Dromaeo DOM test score is lower
Attachments
Fixes the bug (1.58 KB, patch)
2012-01-05 18:47 PST, Ryosuke Niwa
kling: review+
kling: commit-queue+
Ryosuke Niwa
Comment 1 2012-01-05 18:47:24 PST
Created attachment 121383 [details] Fixes the bug
Ryosuke Niwa
Comment 2 2012-01-05 19:14:11 PST
Note You need to log in before you can comment on or make changes to this bug.