REGRESSION(r104210): Dromaeo DOM test score is lower https://bugs.webkit.org/show_bug.cgi?id=75679

Reviewed by Andreas Kling.

The regression was caused by isDomVersionConsistent not being able to obtain the tree version
inside isLengthCacheValid when m_cachedItem is null. Fix the regression by always setting
m_cachedItem to some node when caching the length so that we can obtain the tree version later.

Also address Antti's review comment to fit m_cachedLength, m_isLengthCacheValid, and
m_isItemCacheValid all in 32-bit.

* dom/DynamicNodeList.cpp:
(WebCore::DynamicSubtreeNodeList::SubtreeCaches::setLengthCache):


Canonical link: https://commits.webkit.org/92475@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@104263 268f45cc-cd09-0410-ab3c-d52691b4dbfc